--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
   color: #333;
   line-height: 1.5;
   transition: background-color 0.3s ease, color 0.3s ease;
-}
+ background-image: url("background.jpg");
+background-size: cover;}
 
 /* ========== HEADER ========== */
 header {
@@ -35,7 +36,7 @@ h2 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 700;
-  color: #2c3e50;
+  color: #ffffff;
   margin: 40px 0 25px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
@@ -188,8 +189,9 @@ footer {
   color: white;
   text-align: center;
   padding: 15px 10px;
-  margin-top: 20px;
+    margin-bottom: 3px;
   font-size: 0.9rem;
+  display: block;
 }
 
 footer a {
@@ -203,7 +205,7 @@ footer a:hover {
 }
 
 footer p {
-  margin-top: 5px;
+  margin-top: 3px;
   color: #bbb;
 }
 
